KSAP-1987 - Fixed spacing issues of the validation tool tips
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-ap/trunk@76561 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-ap-web/src/main/webapp/themes/ksapboot/stylesheets/ksap.planner.less
+++ b/ks-ap-web/src/main/webapp/themes/ksapboot/stylesheets/ksap.planner.less
@@ -189,6 +189,8 @@
     font-size: 14px;
     color: #F90;
     width: 20px;
+    margin-top: 0.5rem;
+    line-height: 15px;
   }
 }
 
